nodes/clusters/flux-prod/nodepools/cluster-services/assignment-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: namespace-to-nodeselector-cluster-services
  annotations:
    policies.kyverno.io/title: Add nodeSelector and toleration to pods in cluster-services namespaces
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.6.0
spec:
  rules:
  - name: add-nodeselector
    match:
      any:
      - resources:
          kinds:
          - Pod
          namespaces:
          - ack-system
          - adm
          - coroot
          - db-operator-system
          - external-secrets
          - flux-system
          - gemini
          - grafana
          - infra
          - keda
          - kube-system
          - loki
          - monitoring
          - nidhogg
          - spegel
          - stg
          - vector
          - victoriametrics
          - temporal
    exclude:
      any:
      - resources:
          kinds:
          - Pod
          names:
          - helm-controller-*
          - image-automation-controller-*
          - image-reflector-controller-*
          - kustomize-controller-*
          - notification-controller-*
          - source-controller-*
          namespaces:
          - flux-system
    mutate:
      patchStrategicMerge:
        spec:
          nodeSelector:
            Project: flux-prod
